# cloud-alliance-score

./: .dockerignore  .env.example  .gitignore  .vercelignore  Dockerfile  EXAMPLES.md  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: ci.yml
api/: index.py
app/: streamlit_app.py
demo/discovery/: langchain-gcp.json
demo/scorecards/: capital-one.json  sephora.json  stripe.json
public/: index.html
scripts/: run_api.sh  score_cli.py
src/cloud_alliance_score/: __init__.py  api.py  config.py  demo.py  dimensions.py  llm.py  pipeline.py  schemas.py  scripts_entry.py
src/cloud_alliance_score/discovery/: __init__.py  cache.py  generator.py  ranker.py  runtime.py  schemas.py  validator.py
src/cloud_alliance_score/graph/: __init__.py  build.py  nodes.py  state.py
src/cloud_alliance_score/tools/: __init__.py  cache.py  search.py
tests/: conftest.py  test_aggregator.py  test_api.py  test_cache.py  test_cli.py  test_demo.py  test_discovery.py  test_graph.py  test_schemas.py  test_search.py
